docs: added details about venv

--- a/docs/tutorial.mdx
+++ b/docs/tutorial.mdx
@@ -64,6 +64,8 @@ Run the script with:
 
 <CodeHighlighter language="bash" code="python main.py" />
 
+Note: Make sure that venv is activated. Refer to the Installation section above for details on activating the virtual environment.
+
 The script will:
 1. Analyze the code files in the specified project directory
 2. Generate explanations and screenshots for each file
